--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@
   .nav .company-name {
     height: 20px;
   }
-  .nav li {
+  .nav li a {
     font-size: 12px;
   }
 }
@@ -210,26 +210,25 @@
     width: 20px;
   }
   .hero__main .hero-swiper .swiper-button-next {
-    right: 46px;
+    right: -3px;
   }
   .hero__main .hero-swiper .swiper-button-prev {
     left: 62px;
   }
   .hero__main .hero-swiper .swiper-scrollbar {
-    width: 40%;
-    bottom: 24px;
-    left: 52%;
+    width: 60%;
+    left: 54%;
   }
   .hero__main .description {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    padding-bottom: unset;
+    padding-bottom: 45px;
     height: unset;
   }
   .hero__main .description__title {
     font-size: 30px;
-    margin-bottom: 32px;
+    margin-bottom: 20px;
   }
   .hero__main .description__title #animated-text {
     font-size: 30px;
@@ -238,6 +237,7 @@
     padding: 12px 32px;
     bottom: 55px;
     font-size: 14px;
+    width: 173px;
   }
   .hero__facts .fact {
     min-width: unset;
